CHANGELOG FOR ATOMSK
====================


Master (development)
--------------------
- fixed a bug in the reading of CIF files, where the electric charge of ions was not always read correctly.
- fixed a bug in the writing of CIF files, that caused a crash when no auxiliary property was defined.


Beta 0.9.2 (22 March 2017)
--------------------------
- fixed a bug when reading VASP POSCAR files, where the scaling factor was not properly applied. Thanks to Antoine Kraych, CEA, France, for pointing out this bug.
- fixed a bug when reading CIF files, where symmetry operations were not parsed correctly if they started with "+".


Beta 0.9.1 (17 March 2017)
--------------------------
- fixed a bug in neighbor search routines, where atoms at exact same positions would not be considered neighbors.


Beta 0.9 (1 March 2017)
-----------------------
- new mode "--density" allows to compute a 1-D, 2-D or 3-D density profile of a given property (mass, electric charge...).
- new mode "--central-symmetry" allows to compute a central symmetry parameter.
- new option "-roll" allows to roll a system into a tube around an axis.
- new option "-separate" allows to pull apart atoms that are too close to each other.
- new option "-spacegroup" allows to apply symmetry operations corresponding to a space group.
- new option "-swap" allows to exchange the indices of two atoms, or two box dimensions.
- new option "-torsion" allows to apply torsion along a Cartesian axis.
- added support for reading and writing files in CEL format, used by Dr. Probe. Thanks to Juri Barthel, RWTH Aachen, Germany, for implementing this file format.
- added support for reading and writing files in JEMS format.
- added support for reading and writing files in VESTA format.
- new set of algorithms to apply symmetry operations and deal with space groups. Thanks to Juri Barthel, RWTH Aachen, Germany, for implementing this feature.